--- a/src/index.css
+++ b/src/index.css
@@ -1,75 +1,73 @@
 *{box-sizing: border-box;
   margin: 0;
   padding: 0;
-  
-  
   }
-  .App{
-    display: center;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
-     width: 100%;
-     height:100vh;
-     text-align: center;
-     font-size: 50px;
-    
-  }
-  .container {
-  box-shadow: 0px ,0px ,12px lightgray;
-  border-radius: 8px;
-  padding: 1rem;
-text-align: left;
-  
-  font-size: 25px;
-  }
-
+.App{
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+ font-style: italic;
+ font-size: 130px;
+ font-weight:bold ;
+}
+.container{
+  background-color:gray;
+  width: 500px;
+  height:500px;
+  text-align: center;
+  margin-left:20px;
+  margin-top: 100px;
+  font-size: 22px;
+ 
+}
   input{
-    align:center ;
-    width: 30%;
-    font-size: 1.2rem;
-    padding:8px,4px ;
-  margin: 8px,0;
-  border-radius: 8px;
-
-background-color: rgb(222, 222, 222);
+    border-radius: 90% ,90%;
+    border-color:  rgb(33, 21, 21);
+    height: 50px;
+    width: 300px;
+   font-size: 40px;
+   font-style: oblique;
+   font-weight: bolder;
   }
-  .btn {
-   
-    width: 10%;
-  font-size: 1.2rem;
-  margin: 8px ,0;
-  padding: 10px ,0;
-  background-color:rgb(243, 243, 243) ;
-  color: rgb(22, 15, 15);
-  border: 1px solid black;
-  border-radius: 8px;
-  cursor: pointer;
-  }
-  .btno{
-    background-color: white;
-    color: black;
-  }
-  .center{
-    font-size: 30px;
-    font-optical-sizing: 10 ;
-  }
-  
-  p{
-    margin: 10px;
-  }
-  
-  body {
-    margin: 0;
-    background:linear-gradient(violet, darkviolet);
+  .btn{
+    background-color: #80757f91; 
+  border: none;
+  color: rgb(0, 0, 0);
+  padding: 5px 5px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+  }.box{
+    background-color: gray;
+    width: 500px;
+    height: 500px;
+    text-align: center;
+    margin-left: 540px;
+    margin-top: -500px;
+    font-size: 22px;
+    border-radius: 40% , 40%;
+    border-color: Gray;
     
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  }.box-box{
+    background-color: gray;
+    width: 500px;
+    height: 500px;
+    text-align:center;
+    margin-left: 1060px;
+    margin-top: -500px;
+    font-size: 22px;
+    font-weight: bold;
+    
   }
-  
+  body {
+    background: linear-gradient(#e01dc9, #5f086b);
+    
+    height: auto;
+  width: auto;
+  }
+p{
+  font-size: 42px;
+}
   code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
       monospace;
